src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  @font-face {
    font-family: opensans;
    src: url('./fonts/OpenSans-Regular.ttf');
    font-weight: 400;
  }
  @font-face {
    font-family: opensans;
    src: url('./fonts/OpenSans-SemiBold.ttf');
    font-weight: 600;
  }
  @font-face {
    font-family: opensans;
    src: url('./fonts/OpenSans-Bold.ttf');
    font-weight: 700;
  }

  :root {
    --green: #06b995;
    --blue: #071b4d;
    --dark-blue: #232a34;
    --dark: #1a1a1a;

    --primary: var(--green);
    --primary-text: var(--dark);
    --navbar-bg: var(--dark-blue);
  }
  body,
  html {
    font-family: opensans !important;
    color: var(--dark);
  }
}

@layer components {
  .navbar-main {
    background: var(--navbar-bg);
    @apply h-16 flex items-center px-4 w-full;
  }
  .btn {
    @apply py-2 px-6 cursor-pointer transition-all font-semibold rounded-sm outline-none focus:outline-none;
  }
  .btn-primary {
    @apply text-white bg-green-600 hover:bg-green-500;
  }
  .btn-light {
    color: inherit;
    @apply bg-transparent;
  }
  .searchbar {
    @apply h-11 w-full max-w-screen-sm;
  }
  .navbar-main-transparent {
    --navbar-bg: transparent;
  }
  .navbar-main-transparent .searchbar {
    @apply hidden;
  }
  .hero-main {
    min-height: 500px;
    height: 100%;
    /* min-height: 380px; */
    z-index: -1;
    @apply bg-gray-100 px-4;
  }
  .hero-text {
    z-index: 1;
    @apply max-w-2xl;
  }
  .suggestion {
    @apply text-white flex text-sm;
  }
  .suggestion a {
    @apply mr-1 text-gray-300;
  }
}

